project(CudaSmartPointersTests)

add_executable(unique_pointer_test test_unique_pointer.cpp)
target_link_libraries(unique_pointer_test PRIVATE CudaSmartPointers)

add_executable(shared_pointer_test test_shared_pointer.cpp)
target_link_libraries(shared_pointer_test PRIVATE CudaSmartPointers)

# add_executable(mem_utils_test test_mem_utils.cpp)
# target_link_libraries(mem_utils_test PRIVATE CudaSmartPointers)
